--- a/config/sale/source/config.ini
+++ b/config/sale/source/config.ini
@@ -1,10 +1,10 @@
 [DEFAULT]
 
 db_path1 = ./db.sqlite3
-db_path2 = ./../../db.sqlite3
+db_path2 = ./../../../../db.sqlite3
 
 excel_db_path1 = ./売上.xlsx
-excel_db_path2 = ./../../売上.xlsx
+excel_db_path2 = ./../../../../売上.xlsx
 
 download_path1 = C:/Users/user/Downloads/
 download_path2 = C:/Users/ban/Downloads/
