--- a/GUI/通販データ取り込み/config.ini
+++ b/GUI/通販データ取り込み/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 
 db_path1 = ./db.sqlite3
-db_path2 = ./../config/db.sqlite3
+db_path2 = ./../../config/db.sqlite3
 
 excel_db_path1 = ./売上.xlsx
 excel_db_path2 = ./../売上.xlsx
